--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpiritFlow - Liquor Store Platform</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Montserrat', sans-serif;
         background-color: #F8F9FA;
       }
-      h1, h2, h3, .serif {
-        font-family: 'Playfair Display', serif;
+      h1, h2, h3, .font-serif { /* Changed .serif to .font-serif for Tailwind compatibility */
+        font-family: 'Poppins', serif;
       }
       /* Custom scrollbar for webkit */
       ::-webkit-scrollbar {
